--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -11,22 +11,22 @@
         <Grid>
             <Image Source="../Images/Graph.jpg"/>
             <Canvas Name="MyCanvas" Focusable="True" >
-                <Ellipse Name="rec1" Tag="cursor" Width="20" Height="20" Margin="0" Canvas.Left="135" Canvas.Top="135">
+                <Ellipse Name="rec1" Tag="cursor" Width="10" Height="10" Margin="0" Canvas.Left="148" Canvas.Top="140">
                     <Ellipse.Fill>
                         <SolidColorBrush Color="Black" />
                     </Ellipse.Fill>
                 </Ellipse>
-                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs1" Canvas.Left="385" Canvas.Top="115" RenderTransformOrigin="1.517,0.432" />
-                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs2" Canvas.Left="621" Canvas.Top="10" RenderTransformOrigin="0.667,-0.27" />
-                <Image Height="40" Width="30" Source="../Images/circle.png" Tag="obs3" Canvas.Left="796" Canvas.Top="219" RenderTransformOrigin="0.567,-0.373" />
+                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs1" Canvas.Left="396" Canvas.Top="108" RenderTransformOrigin="1.517,0.432" />
+                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs2" Canvas.Left="621" Canvas.Top="30" RenderTransformOrigin="0.667,-0.27" />
+                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs3" Canvas.Left="796" Canvas.Top="210" RenderTransformOrigin="0.567,-0.373" />
 
 
                 <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"  Canvas.Left="-113"/>
                 <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-113"/>
                 <Label x:Name="WinText" Content="" Canvas.Left="10" Canvas.Top="42" Height="168" Width="386" FontSize="20" FontWeight="ExtraBold"/>
-                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="40" Height="22" FontSize="15" Click="ResetButton_Click" Canvas.Left="-113" Canvas.Top="217"/>
-                <Button x:Name="BackButton" Content="Back" Canvas.Left="-113" Canvas.Top="244" Width="40" Height="22" FontSize="15" Click="BackButton_Click"/>
-                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="57" Height="38" FontSize="15" Canvas.Left="301" Canvas.Top="219" Click="PauseButton_Click"/>
+                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="25" Height="14" FontSize="7" Click="ResetButton_Click" Canvas.Left="-88" Canvas.Top="244"/>
+                <Button x:Name="BackButton" Content="Back" Canvas.Left="-113" Canvas.Top="244" Width="25" Height="14" FontSize="7" Click="BackButton_Click"/>
+                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="25" Height="14" FontSize="7" Canvas.Left="-54" Canvas.Top="244" Click="PauseButton_Click"/>
             </Canvas>
 
 
