--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -9,25 +9,71 @@
 
     <Viewbox>
         <Grid>
-            <Image Source="../Images/Graph.jpg"/>
+            <Image Source="../Images/Graph.jpg" Margin="-1203,-287,1203,286.667"/>
             <Canvas Name="MyCanvas" Focusable="True" >
-                <Ellipse Name="rec1" Tag="cursor" Width="10" Height="10" Margin="0" Canvas.Left="148" Canvas.Top="140">
+                <Ellipse Name="rec1" Tag="cursor" Width="10" Height="10" Margin="0" Canvas.Left="251" Canvas.Top="136">
                     <Ellipse.Fill>
                         <SolidColorBrush Color="Black" />
                     </Ellipse.Fill>
                 </Ellipse>
-                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs1" Canvas.Left="396" Canvas.Top="108" RenderTransformOrigin="1.517,0.432" />
+
+                <Line X1="0" Y1="0" X2="0" Y2="280" Stroke="Black" StrokeThickness="2" Canvas.Left="256" Canvas.Top="0"/>
+                <Line X1="300" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="2" Canvas.Top="143" Canvas.Left="106"/>
+
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="116" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="90" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="64" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="38" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="12" Canvas.Left="251"/>
+
+
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="168" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="194" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="220" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="246" Canvas.Left="251"/>
+                <Line X1="10" Y1="0" X2="0" Y2="0" Stroke="Black" StrokeThickness="1" Canvas.Top="272" Canvas.Left="251"/>
+
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="229" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="203" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="177" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="152" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="126" Canvas.Top="139"/>
+
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="281" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="307" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="333" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="359" Canvas.Top="139"/>
+                <Line X1="0" Y1="0" X2="0" Y2="10" Stroke="Black" StrokeThickness="1" Canvas.Left="385" Canvas.Top="139"/>
+
+                <TextBlock FontSize="19" Canvas.Left="380" Canvas.Top="148" Height="21" Width="23">
+                5<LineBreak/>
+                </TextBlock>
+
+                <TextBlock FontSize="19" Canvas.Left="234" Height="25" Width="23">
+                5<LineBreak/>
+                </TextBlock>
+
+                <TextBlock FontSize="19" Canvas.Left="225" Canvas.Top="259" Height="35" Width="26" RenderTransformOrigin="0.308,2.003">
+                -5<LineBreak/>
+                </TextBlock>
+
+                <TextBlock FontSize="19" Canvas.Left="113" Canvas.Top="148" Height="35" Width="26" RenderTransformOrigin="0.308,2.003">
+                -5<LineBreak/>
+                </TextBlock>
+
+                <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs1" Canvas.Left="403" Canvas.Top="103" RenderTransformOrigin="1.517,0.432" />
                 <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs2" Canvas.Left="621" Canvas.Top="30" RenderTransformOrigin="0.667,-0.27" />
                 <Image Height="80" Width="20" Source="../Images/Gate.png" Tag="obs3" Canvas.Left="796" Canvas.Top="210" RenderTransformOrigin="0.567,-0.373" />
 
 
-                <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="36"  Canvas.Left="-113"/>
-                <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-113"/>
+                <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="37"  Canvas.Left="-104"/>
+                <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-104" RenderTransformOrigin="0.666,0.635"/>
                 <Label x:Name="WinText" Content="" Canvas.Left="10" Canvas.Top="42" Height="168" Width="386" FontSize="20" FontWeight="ExtraBold"/>
                 <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="25" Height="14" FontSize="7" Click="ResetButton_Click" Canvas.Left="-88" Canvas.Top="244"/>
                 <Button x:Name="BackButton" Content="Back" Canvas.Left="-113" Canvas.Top="244" Width="25" Height="14" FontSize="7" Click="BackButton_Click"/>
                 <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="25" Height="14" FontSize="7" Canvas.Left="-54" Canvas.Top="244" Click="PauseButton_Click"/>
             </Canvas>
+            <TextBlock HorizontalAlignment="Left" Margin="-96,80,0,0" TextWrapping="Wrap" Text="Rules go here" VerticalAlignment="Top" Height="76" Width="145"/>
 
 
 
