--- a/KinectMathGames/Gui/VelocityWindow.xaml
+++ b/KinectMathGames/Gui/VelocityWindow.xaml
@@ -69,12 +69,59 @@
                 <Label Name="txtscore" FontSize="20" FontWeight="Bold" Content="Score: 0" RenderTransformOrigin="5.441,1.98" Canvas.Top="37"  Canvas.Left="-104"/>
                 <Label Name="VelocityText" FontSize="20" FontWeight="ExtraBold" Content="Velocity Game"  Canvas.Left="-104" RenderTransformOrigin="0.666,0.635"/>
                 <Label x:Name="WinText" Content="" Canvas.Left="10" Canvas.Top="42" Height="168" Width="386" FontSize="20" FontWeight="ExtraBold"/>
-                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="25" Height="14" FontSize="7" Click="ResetButton_Click" Canvas.Left="-88" Canvas.Top="244"/>
-                <Button x:Name="BackButton" Content="Back" Canvas.Left="-113" Canvas.Top="244" Width="25" Height="14" FontSize="7" Click="BackButton_Click"/>
-                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="25" Height="14" FontSize="7" Canvas.Left="-54" Canvas.Top="244" Click="PauseButton_Click"/>
+                <Button x:Name="ResetButton" Content="reset" HorizontalAlignment="Left" VerticalAlignment="Top" Width="25" Height="14" FontSize="7" Click="ResetButton_Click" Canvas.Left="-73" Canvas.Top="255"/>
+                <Button x:Name="BackButton" Content="Back" Canvas.Left="-98" Canvas.Top="255" Width="25" Height="14" FontSize="7" Click="BackButton_Click"/>
+                <Button x:Name="PauseButton" Content="Pause" HorizontalAlignment="Left" VerticalAlignment="Top"  Width="25" Height="14" FontSize="7" Canvas.Left="-32" Canvas.Top="255" Click="PauseButton_Click"/>
             </Canvas>
-            <TextBlock HorizontalAlignment="Left" Margin="-96,80,0,0" TextWrapping="Wrap" Text="Rules go here" VerticalAlignment="Top" Height="76" Width="145"/>
-
+            <TextBlock x:Name="instructions" HorizontalAlignment="Left" Margin="-94,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="145" Width="194" FontSize="7.5" RenderTransformOrigin="-0.043,1.625"><Run Text="&#x9;              &#x9;          ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><Run FontWeight="Bold" Text="THE GOAL">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="■    Get to 20 points by moving the cursor through ">
+                </Run><LineBreak/><Run Text="       the gates">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><LineBreak/><Run Text=" &#x9;          &#x9;      ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><Run FontWeight="Bold" Text="HOW TO PLAY">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="■    The cursor moves vertically in coordination with your">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="       movements in real life :&#xA;       -   move forward = cursor goes up ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="       -   move backward = cursor goes down  ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="■   The speed of the cursor depends on how fast you go      ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="■   The game ends when you get the cursor through">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                </Run><LineBreak/><Run Text="       the gate successfully 20 times. ">
+                    <Run.Background>
+                        <ImageBrush/>
+                    </Run.Background>
+                
+                   
+                </Run></TextBlock>
+            <TextBlock Name="textBlock" HorizontalAlignment="Left" Margin="-94,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="145" Width="194" FontSize="8"/>
 
 
         </Grid>
